--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Messages#index</h1>
-<p>Find me in app/views/messages/index.html.erb</p>
+<div class="wrapper">
+  <%= render "side_bar" %>
+  <%= render "main_chat" %>
+</div>
+<%# ↑サイドバーとチャット画面のビューが読み込まれるように設定
+　render:部分テンプレートを呼び出す %>
