サイドバーとチャット画面のレイアウト作成

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,22 @@
 <div class="wrapper">
+  
+  <div class = "side-bar">
   <%= render "side_bar" %>
+  </div>
+
+  <div class = "chat">
   <%= render "main_chat" %>
+  </div>
+
+
 </div>
-<%# ↑サイドバーとチャット画面のビューが読み込まれるように設定
-　render:部分テンプレートを呼び出す %>
+
+
+
+
+
+
+
+
+<%# render部：サイドバーとチャット画面のビューが読み込まれるように設定
+　render:部分テンプレートを呼び出す 呼び出すファイルを指定するpartialは省略している%>
