--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -8,15 +8,41 @@
   background-color:#253141;
 }
 
+
 .side-bar-header{
   height: 100px;
   padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
+.header-name a{
+  font-size: 16px;
+  color: #FAFAFA;
+  text-decoration: none;
+}
+/* aタグに挟まれた部分は初期設定で文字色が青、
+下線が入るようになっているので必ずセレクタはaタグまで含むこと */
+
+.create-room a{
+  font-size: 10px;
+  color: deepskyblue;
+  border: 1px solid lightblue;
+  padding: 14px;
+  text-decoration: none;
+}
+
 
 .rooms{
   background-color:#2F3E51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
+}
+
+.room{
+  padding: 20px 0 40px;
 }
 
 .chat{
@@ -26,7 +52,6 @@
 
 .chat-header{
   height: 100px;
-  margin: 0 0 46px 0;
   padding: 0 40px;
 }
 
@@ -36,8 +61,13 @@
   padding: 46px 40px 0;
 }
 
-.chat-bottom{
+.form{
   height: 90px;
   background-color:#DDDDDD;
   padding: 20px 40px;
+}
+
+.room-name a{
+  color: white;
+  text-decoration: none;
 }
