--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,6 +1,7 @@
 <div class = "side-bar-header">
   <div class = header-name>
-    <a href="#">Tom</a>
+    <%= link_to current_user.name, edit_user_path(current_user) %>
+    <%# 遷移先のパスはrails routesでeditのパスを確認 %>
   </div>
   <div class = create-room>
     <a href="#">チャットを作成する</a>
