ログアウト機能の実装

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,11 @@
+<%# アカウント編集ページのビュー コメントアウトがない部分は用意されたものをコピペしてる %>
 <div class='account-page' id='account-page'>
   <div class='account-page__inner clearfix'>
     <div class='account-page__inner--left account-page__header'>
       <h2>Edit Account</h2>
       <h5>アカウントの編集</h5>
-      <%= link_to "ログアウト", "#", class: 'btn'%>
+      <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'btn'%>
+      <%# deviseのログアウト機能を使用 HTTPメソッドのdeleteを指定するとdeviseのsessionsコントローラーのdestroyアクションが実行される %>
       <%= link_to "チャットページに戻る", :back, class: 'btn'%>
     </div>
     <div class='account-page__inner--right user-form'>
