--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -17,6 +17,16 @@
         <label class='chat-room-form__label' for='chat_room_チャットメンバー'>チャットメンバー</label>
       </div>
       <div class='chat-room-form__field--right'>
+        <select name="room[user_ids][]">
+          <option value="">チャットするユーザーを選択してください</option>
+          <% User.where.not(id: current_user.id).each do |user| %>
+          <%# 現在ログインしているユーザー以外の情報を全て取得/4711 %>
+            <option value=<%= user.id %>><%= user.name %></option>
+          <% end %>
+        </select>
+        <input name="room[user_ids][]" type="hidden" value=<%= current_user.id %>>
+        <%# プルダウンの実装/4711 %>
+        <%# room[user_ids][]というキーの中に"選択したユーザーのid, 現在ログインしているユーザーのid"の情報を格納してコントローラーに送信する %>
       </div>
     </div>
     <div class='chat-room-form__field'>
