投稿時刻の日本時間への修正

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,8 @@
 <div class = "chat-header">
   <div class = "left-header">
     <div Class ="header-title">
-      hogefuga
+      <%= @room.name %>
+      <%# チャットルーム名をヘッダーに表示/4762 %>
     </div>
   </div>
 
