チャットルームの削除機能の実装

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -8,7 +8,8 @@
 
   <div class = "right-header">
     <div class = "header-button">
-      <a href = "#">チャットを終了する</a>
+      <%= link_to "チャットを終了する", room_path(@room), method: :delete %>
+      <%# 削除するルームを指定するために@roomで指定,roomsコントローラーのdestroyアクションが実行される %>
     </div>
   </div>
 </div>
