画像表示の実装

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -15,5 +15,8 @@
     <!-- 投稿したメッセージ内容を記述する -->
       <%= message.content%>
     </div>
+    <%= image_tag message.image.variant(resize:'500x500'), class: 'message-image' if message.image.attached?%>
+    <%# if message.image.attached?と記述することで、画像が存在する場合のみimage_tagが読み込まれるようになる/4763 %>
+    <%# resizメソッドで画像のサイズを指定/4763 %>
   </div>
 </div>
